# wooper.dev

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: publish-image.yaml
scripts/: update_quickshell.py
tests/: test_actual_logic.py  test_main.py  test_version_comparison_bug.py
wooper_dev/: actual_logic.py  hydra.py  main.py  quickshell.lock.json  updater.py
wooper_dev/templates/: index.html
