[project]
name = "wooper-dev"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "packaging>=25.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
