[project]
name = "wooper-dev"
version = "0.1.13"
description = "A nix thing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "packaging>=25.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.7",
]
